<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Scheduler</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="sign_in_with_phone">Sign in with Phone</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_code">Send Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="back">Back</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="enter_phone_number_hint">Enter your phone number to receive a verification code</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="enter_sms_code_hint">Enter the SMS code sent to %s</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_subtitle">Enter your email and we\'ll send you a reset link</string>
    <string name="send_reset_email">Send Reset Email</string>
    <string name="reset_email_sent">Check your email for the reset link</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_subtitle">Sign up to get started</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
</resources>
